Fixes tutorial title and time on mobile

--- a/packages/marble/src/templates/tutorial/_tutorial.scss
+++ b/packages/marble/src/templates/tutorial/_tutorial.scss
@@ -45,6 +45,43 @@
     color: $accent;
   }
 
+  /* Title
+     ======================================================================== */
+
+  .container .tutorial-title {
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    @media (min-width: $screen-sm-min) {
+      margin-bottom: 20px;
+    }
+  }
+
+  /* Time
+     ======================================================================== */
+
+  .container .tutorial-time-remaining {
+    color: rgba($primary, 0.8);
+    font-family: $font-primary;
+    font-size: 0.8125rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+
+    @media (min-width: $screen-sm-min) {
+      float: right;
+    }
+
+    .icon {
+      margin-right: calc(0.5rem * #{$lineHeight});
+      position: relative;
+      top: 8px;
+    }
+  }
+
   /* Page Nav
      ======================================================================== */
 
@@ -63,44 +100,4 @@
       text-overflow: ellipsis;
     }
   }
-
-  /* Title
-     ======================================================================== */
-
-  .tutorial-title {
-    font-size: 16px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    flex: 1 1 auto;
-  }
-
-  /* Time
-     ======================================================================== */
-
-  .tutorial-time-remaining {
-    color: rgba($primary, 0.8);
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    align-items: center;
-    align-self: center;
-
-    font-size: 0.8125rem;
-    font-family: $font-primary;
-    font-weight: 600;
-    color: rgba($white, 0.8);
-    flex-shrink: 0;
-
-    > * {
-      margin-right: calc(0.5rem * #{$lineHeight});
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-
 }
